--- a/app/addListing/paymentDetail/view.html
+++ b/app/addListing/paymentDetail/view.html
@@ -46,7 +46,7 @@
         <label for="name">Expiry Year: </label>
       </div>
       <div class="col-md-9 col-sm-9 col-xs-12">
-        <select ng-model="$root.year" name="year" required="">
+        <select ng-model="$root.year" ng-change="$ctrl.validateMonth()" name="year" required="">
           <option value="">Select Year</option>
           <option value="2017">2017</option>
           <option value="2018">2018</option>
@@ -66,7 +66,7 @@
         <label for="name">Expiry Month: </label>
       </div>
       <div class="col-md-9 col-sm-9 col-xs-12">
-        <select ng-model="$root.month" name="month" required="">
+        <select ng-model="$root.month" ng-change="$ctrl.validateMonth()" name="month" required="">
           <option value="">Select Month</option>
           <option value="01">01</option>
           <option value="02">02</option>
@@ -81,7 +81,7 @@
           <option value="11">11</option>
           <option value="12">12</option>
         </select>
-        <p ng-show="$root.addlistForm.month.$invalid" class="help-block">Invalid Month</p>
+        <p ng-show="$root.addlistForm.month.$invalid || $ctrl.validMonth===0" class="help-block">Invalid Month</p>
       </div>
     </div>
     <!-- CVV Code -->
@@ -109,7 +109,7 @@
     <div class="adn-row">
       <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
         <input class="btn modal_btn btn_size pull-left" value="Previous" type="button" ng-click="$ctrl.previous()">
-        <button type="button" ng-click="$root.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="$root.addlistForm.card.$invalid || ($ctrl.totalDigits<19) ||  $root.addlistForm.year.$invalid || paymentDetailsForm.month.$invalid || $root.addlistForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || $root.addlistForm.middleName.$invalid || $root.addlistForm.lastName.$invalid">Next</button>
+        <button type="button" ng-click="$root.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="$root.addlistForm.card.$invalid || ($ctrl.totalDigits<19) ||  $root.addlistForm.year.$invalid || paymentDetailsForm.month.$invalid || $ctrl.validMonth===0 || $root.addlistForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || $root.addlistForm.middleName.$invalid || $root.addlistForm.lastName.$invalid">Next</button>
         <input class="btn modal_btn btn_size pull-right" ng-show="$root.paymentSkip" value="Skip" id="skip" type="button" ng-click="$ctrl.skipStep()">
       </div>
     </div>
