fixed css for sponsored step

--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -2,6 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-8 col-md-12 margin-left" style="margin-top:25%;">
+      <div class="col-sm-12 steps_sponsored step3">Step 3: Confirm or Edit your selected options to advertise</div>
     </div>
   </div>
 </div>
@@ -22,7 +23,7 @@
     </div>
   </div>
 </div>
-gdgdfg{{$root.treatmentCentersModel}}
+<!--<div>{{$root.treatmentCentersModel}}</div>-->
 <table class="responstable">
   <tbody>
     <tr>
@@ -128,14 +129,3 @@ gdgdfg{{$root.treatmentCentersModel}}
     </tr>
   </tbody>
 </table>
-
-<div class="panel-footer">
-  <div class="row text-center">
-
-    <!-- <div class="col-xs-3">
-      <button type="button" class="btn btn-success btn-block">
-        Checkout
-      </button>
-    </div> -->
-  </div>
-</div>
