fixed payment name validation

--- a/app/addListing/paymentDetail/view.html
+++ b/app/addListing/paymentDetail/view.html
@@ -28,7 +28,7 @@
       </div>
       <div class="col-md-8 col-sm-8 col-xs-12">
         <input placeholder="Name" name="firstName" class="form-control" type="text" ng-model="$root.firstName" ng-minlength="2" ng-maxlength="25" required="" autocomplete="off">
-        <p ng-show="$root.addlistForm.firstName.$invalid" class="help-block"> First Name</p>
+        <p ng-show="$root.addlistForm.firstName.$invalid" class="help-block"> Name</p>
       </div>
       <!-- <div class="col-md-3 col-sm-3 col-xs-12">
         <input placeholder="Middle Name" name="middleName" class="form-control" type="text" ng-model="$root.middleName" ng-maxlength="20" autocomplete="off">
