--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -23,7 +23,7 @@
     </div>
   </div>
 </div>
-<!--<div>{{$root.treatmentCentersModel}}</div>-->
+<!-- {{$root.treatmentCentersModel}} -->
 <table class="responstable">
   <tbody>
     <tr>
