--- a/app/myProfile/accountSettings/view.html
+++ b/app/myProfile/accountSettings/view.html
@@ -60,7 +60,7 @@
             <label for="country">Country</label>
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <input ng-model="$ctrl.country" type="text" name="country" class="form-control required" value="" />
+            <input ng-model="$ctrl.country" type="text" name="country" class="form-control required" ng-value="$ctrl.country" readonly="readonly" />
           </div>
         </div>
 
@@ -83,7 +83,7 @@
               <option value="">Select City</option>
               <option ng-repeat="cities in $ctrl.cities track by $index" value="{{cities}}">{{cities}}</option>
             </select>
-            <p ng-show="$ctrl.accountSetting.city.$invalid">Required</p>
+            <!-- <p ng-show="$ctrl.accountSetting.city.$invalid" class="help-block">Required</p> -->
           </div>
         </div>
 
@@ -94,7 +94,7 @@
           </div>
           <div class="col-md-8 col-sm-8 col-xs-12">
             <input ng-model="$ctrl.zipcode" type="text" name="zipcode" ng-change="$ctrl.testZip()" class="form-control required" number="true" minlength="5" maxlength="5" ng-pattern="/^\d{5}$/" required="true" placeholder="14100" />
-            <span ng-show="$ctrl.accountSetting.zipcode.$invalid" class="help-block">Required and Zip code must be 5 digits</span>
+            <!-- <span ng-show="$ctrl.accountSetting.zipcode.$invalid" class="help-block">Required and Zip code must be 5 digits</span> -->
             <span ng-if="($ctrl.zipFound===0 && $ctrl.accountSetting.zipcode.$valid)" class="help-block">Invalid zip, doesn't match with selected state.</span>
           </div>
         </div>
@@ -117,7 +117,7 @@
           <div class="col-md-8 col-sm-8 col-xs-12">
             <input ng-model="$ctrl.phone" type="text" name="phone" placeholder="eg. (601) 521-1542" number="true" ng-change="$ctrl.testPhone()" class="form-control required" required="true" phone-input restrict="reject" ng-minlength="14" maxlength="14">
             <p ng-show="$ctrl.accountSetting.phone.$error.pattern || $ctrl.accountSetting.phone.$error.minlength || $ctrl.accountSetting.phone.$error.maxlength" class="help-block">Invalid US number.</p>
-            <p ng-show="$ctrl.accountSetting.phone.$error.required" class="help-block">Required</p>
+            <!-- <p ng-show="$ctrl.accountSetting.phone.$error.required" class="help-block">Required</p> -->
           </div>
         </div>
 
@@ -139,7 +139,8 @@
         <!-- Submit -->
         <div class="adn-row">
           <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn adn-btn right" ng-disabled="$ctrl.accountSetting.phone.$invalid || ($ctrl.zipFound === 0) || $ctrl.accountSetting.city.$invalid || $ctrl.accountSetting.last_name.$invalid || $ctrl.accountSetting.first_name.$invalid">Submit</button>
+            <button type="submit" class="btn adn-btn right" ng-disabled=" $ctrl.accountSetting.last_name.$invalid || $ctrl.accountSetting.first_name.$invalid">Submit</button>
+            <!-- <button type="submit" class="btn adn-btn right" ng-disabled="$ctrl.accountSetting.phone.$invalid || ($ctrl.zipFound === 0) || $ctrl.accountSetting.city.$invalid || $ctrl.accountSetting.last_name.$invalid || $ctrl.accountSetting.first_name.$invalid">Submit</button> -->
           </div>
         </div>
       </form>
