Updated addlisting, cart modification

--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -31,7 +31,7 @@
         <span class="pull-left">Treatment Centers</span>
       </td>
       <td colspan="2">
-        <span ng-repeat="center in $root.treatmentCentersModel">{{center.label}}</span>
+        <span class="label label-primary" ng-repeat="center in $ctrl.treatmentCenters">{{center.label}}</span>
       </td>
     </tr>
     <tr>
