--- a/app/addListing/sponsoredStateSelect/view.html
+++ b/app/addListing/sponsoredStateSelect/view.html
@@ -4,7 +4,8 @@
 <div onselectstart="return false;" class="unselectable col-sm-12">
   <div id="mapwrapper" class="col-sm-12">
     <div id="map_base">
-      <state-map ng-click="$ctrl.onStateSelect(state)" on-select="$ctrl.onStateSelect(state)"></state-map>
+      <!-- <state-map ng-click="$ctrl.onStateSelect(state)" on-select="$ctrl.onStateSelect(state)"></state-map> -->
+      <state-map on-select="$ctrl.onStateSelect(state)"></state-map>
     </div>
   </div>
   <div class="col-sm-12 steps_sponsored step2">Step2: Select various categories for your treatment center</div>
