created contact us page

--- a/app/footer/view.html
+++ b/app/footer/view.html
@@ -108,7 +108,7 @@
               <a href="#/add-listing/step1" data-toggle="modal">Sign Up</a>
             </li>
             <li>
-              <a href="http://www.addictionnetwork.com/contact-us">Contact Us</a>
+              <a href="#/contact">Contact Us</a>
             </li>
           </ul>
         </div>
