--- a/app/login/view.html
+++ b/app/login/view.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <form ng-submit="$ctrl.submit();">
-      <div class="col-md-9 col-sm-9 pading_0">
+      <div class="col-md-8 col-sm-8 pading_0">
         <div class="col-md-12 col-sm-12 col-xs-12">
           <h2 class="contct_heding">Log In</h2>
         </div>
@@ -30,5 +30,13 @@
         </div>
       </div>
     </form>
+    <div class="col-md-4 col-sm-4">
+      <div class="side-card">
+        <card-heading>Advertisements</card-heading>
+      </div>
+      <div class="banner_adjust">
+        <img class="img-responsive" id="sidebar_ad">
+      </div>
+    </div>
   </div>
 </div>
