added auto login

--- a/app/addListing/view.html
+++ b/app/addListing/view.html
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <form name="$root.addlistForm" enctype="multipart/form-data">
+      <form name="$root.addlistForm" enctype="multipart/form-data" id="addlistForm">
         <div class="col-lg-12 col-sm-12 col-xs-12">
           <form-nav-section></form-nav-section>
         </div>
