--- a/app/addListing/paidMember/view.html
+++ b/app/addListing/paidMember/view.html
@@ -12,13 +12,11 @@
             </th>
             <th class="text-center">
               <img src="/themes/addiction/images/sponsored.png" width="80">
-
             </th>
             <th class="text-center">
               <img src="/themes/addiction/images/featured.png" width="80">
             </th>
           </tr>
-
           <tr>
             <th>
               <div class="pricing-header ">
@@ -42,7 +40,7 @@
             <th class="highlight-plan topLine-sponsored">
               <div class="pricing-header ">
                 <h4 class="package-title">
-                  Sponsored
+                  Paid
                 </h4>
                 <p class="package-billing">
                   <button type="button" ng-click="$ctrl.sponsored()" class="btn btn-success">Sign Up</button>
@@ -73,14 +71,14 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
           </tr>
           <tr>
             <td>Phone Number Display</td>
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -88,7 +86,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
           </tr>
           <tr class="tr-background">
             <td class="feature-label">
@@ -103,7 +101,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -111,7 +109,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -119,7 +117,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -127,7 +125,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -135,7 +133,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -143,7 +141,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -151,7 +149,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -159,7 +157,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr class="tr-background">
@@ -173,7 +171,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -181,7 +179,7 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr>
@@ -189,20 +187,20 @@
             <td><i class="fa fa-times-circle" aria-hidden="true"></i>
             </td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr class="tr-background">
             <td class="feature-label">Banner Ads</td>
             <td></td>
-            <td class=""><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i></td>
+            <td class=""></td>
+            <td></td>
           </tr>
           <tr>
             <td>Ability to advertise</td>
-            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
             <td class="highlight-plan"><i class="fa fa-check-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
           <tr class="tr-background">
@@ -213,9 +211,9 @@
           </tr>
           <tr>
             <td>Displayed as top 9 best center</td>
+            <td><i class="fa fa-times-circle" aria-hidden="true"></i></td>
             <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-            <td class="highlight-plan"><i class="fa fa-times-circle" aria-hidden="true"></i></td>
-            <td><i class="fa fa-check-circle" aria-hidden="true"></i>
+            <td class="highlight-plan-green"><i class="fa fa-check-circle" aria-hidden="true"></i>
             </td>
           </tr>
         </tbody>
