--- a/app/treatmentCenterDetail/view.html
+++ b/app/treatmentCenterDetail/view.html
@@ -7,6 +7,9 @@
         <center-detail-carousel images="$ctrl.entry.center_images"></center-detail-carousel>
         <!-- Detail -->
         <div class="row">
+          <div class="text-center">
+            <img class="image" src="{{$ctrl.entry.listing_image}}">
+          </div>
           <section-heading>{{ $ctrl.entry.center_name }} Details</section-heading>
           <div class="adn-row">
             <div class="col-md-4 col-sm-4 col-xs-12">
