--- a/app/myProfile/profileNavSection/view.html
+++ b/app/myProfile/profileNavSection/view.html
@@ -6,11 +6,11 @@
     </li>
 
     <!-- Navigation-->
-    <li ng-if="$root.profileData.userType==='free'" ng-repeat="link in $ctrl.linksFree">
+    <li ng-if="$root.profileData.type_of_user==='free'" ng-repeat="link in $ctrl.linksFree">
       <a ui-sref="{{ link.uiSref }}" class="profile-nav-link">{{ link.name }}  </a>
     </li>
 
-    <li ng-if="$root.profileData.userType!=='free'" ng-repeat="link in $ctrl.linksPaid">
+    <li ng-if="$root.profileData.type_of_user!=='free'" ng-repeat="link in $ctrl.linksPaid">
       <a ui-sref="{{ link.uiSref }}" class="profile-nav-link">{{ link.name }}  </a>
     </li>
   </ul>
