--- a/app/myProfile/paymentDetails/add/view.html
+++ b/app/myProfile/paymentDetails/add/view.html
@@ -10,46 +10,48 @@
     </div>
     <div class="profile-row">
       <form name="paymentDetailsForm" ng-submit="$ctrl.submit()">
-        <!-- Card Number -->
         <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-3 col-xs-12">
             <label for="name">Card Number: </label>
           </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <input placeholder="Card Number" name="card" id="name" class="form-control" type="text" ng-change="$ctrl.detectCardType($ctrl.card)" ng-model="$ctrl.card" ng-pattern="/^[0-9]+$/" required="">
-            <span ng-show="paymentDetailsForm.card.$invalid" class="help-block">Invalid Card number</span>
-            <span ng-if="($ctrl.totalDigits<15 || $ctrl.totalDigits>18) && paymentDetailsForm.card.$valid" class="help-block">Card number must be 15~18 digits.</span>
-            <span ng-show="$ctrl.cardType" class="help-block">{{$ctrl.cardType[0].niceType}}</span>
-            <span ng-if="!$ctrl.cardType[0] && paymentDetailsForm.card.$valid" class="help-block">Invalid card type</span>
-
+          <div class="col-md-8 col-sm-9 col-xs-12 ">
+            <div class="">
+              <input placeholder="Card Number" style="float: left;" class="form-control" type="text" ng-keyup="$ctrl.detectCardType($ctrl.card, $event)" ng-change="" ng-maxlength="19" ng-model="$ctrl.card" ng-pattern="/^[0-9' ']+$/" required="" name="card" maxlength="19" autocomplete="off">
+              <i style="font-size: 40px; margin-top: -10px; color: #58aa22; position: absolute; margin-left: -43px;" class="icon large icon-{{$ctrl.cardType}}-card"></i>
+            </div>
+            <p ng-show="paymentDetailsForm.card.$invalid" class="help-block">Invalid Card number</p>
+            <p ng-if="($ctrl.totalDigits<19 || $ctrl.totalDigits>19) && paymentDetailsForm.card.$valid" class="help-block">Card must be have 16 digits.</p>
+            <!-- <p ng-show="$ctrl.cardType" class="help-block">{{$ctrl.cardType[0].niceType}}</p> -->
+            <p ng-if="!$ctrl.cardType[0] && $ctrl.$valid" class="help-block">Invalid card type</p>
           </div>
+
         </div>
 
         <div class="adn-row">
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <label for="name">First Name: </label>
+          </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <label for="name">Name: </label>
+            <input placeholder="Name" name="firstName" class="form-control" type="text" ng-model="$ctrl.firstName" ng-minlength="2" ng-maxlength="25" required="" autocomplete="off">
+            <p ng-show="paymentDetailsForm.firstName.$invalid" class="help-block"> First Name</p>
           </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <input placeholder="First Name" name="firstName" class="form-control" type="text" ng-model="$ctrl.firstName" ng-minlength="2" ng-maxlength="25" required="">
-            <span ng-show="paymentDetailsForm.firstName.$invalid" class="help-block">Invalid First Name</span>
-          </div>
-          <div class="col-md-2 col-sm-2 col-xs-12">
-            <input placeholder="Middle Name" name="middleName" class="form-control" type="text" ng-model="$ctrl.middleName" ng-maxlength="20">
+          <!-- <div class="col-md-3 col-sm-3 col-xs-12">
+            <input placeholder="Middle Name" name="middleName" class="form-control" type="text" ng-model="$ctrl.middleName" ng-maxlength="20" autocomplete="off">
             <span ng-show="paymentDetailsForm.middleName.$invalid" class="help-block">Max-length(20) reached</span>
-          </div>
-          <div class="col-md-3 col-sm-3 col-xs-12">
-            <input placeholder="Last Name" name="lastName" class="form-control" type="text" ng-model="$ctrl.lastName" ng-minlength="2" ng-maxlength="25" required="">
-            <span ng-show="paymentDetailsForm.lastName.$invalid" class="help-block">Invalid Last Name</span>
+          </div> -->
+          <div class="col-md-4 col-sm-4 col-xs-12">
+            <input placeholder="Last Name" name="lastName" class="form-control" type="text" ng-model="$ctrl.lastName" ng-minlength="2" ng-maxlength="25" required="" autocomplete="off">
+            <p ng-show="paymentDetailsForm.lastName.$invalid" class="help-block"> Last Name</p>
           </div>
         </div>
 
         <!-- Expiry Year -->
         <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-3 col-xs-12">
             <label for="name">Expiry Year: </label>
           </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <select ng-model="$ctrl.year" name="year" ng-change="$ctrl.testYear($ctrl.year)" required="">
+          <div class="col-md-9 col-sm-9 col-xs-12">
+            <select ng-model="$ctrl.year" ng-change="$ctrl.validateMonth()" name="year" required="">
               <option value="">Select Year</option>
               <option value="2017">2017</option>
               <option value="2018">2018</option>
@@ -59,16 +61,17 @@
               <option value="2022">2022</option>
             </select>
             <!-- <span class="help-block">{{$ctrl.yearError}}</span> -->
-            <span class="help-block" ng-if="$ctrl.curYear > $ctrl.year">Invalid year</span>
+            <p ng-show="paymentDetailsForm.year.$invalid" class="help-block">Invalid Year</p>
+            <p class="help-block" ng-if="$ctrl.curYear > $ctrl.year">Invalid year</p>
           </div>
         </div>
         <!-- Expiry Month -->
         <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-3 col-xs-12">
             <label for="name">Expiry Month: </label>
           </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <select ng-model="$ctrl.month" name="month" required="">
+          <div class="col-md-9 col-sm-9 col-xs-12">
+            <select ng-model="$ctrl.month" ng-change="$ctrl.validateMonth()" name="month" required="">
               <option value="">Select Month</option>
               <option value="01">01</option>
               <option value="02">02</option>
@@ -83,25 +86,25 @@
               <option value="11">11</option>
               <option value="12">12</option>
             </select>
-            <!-- <span class="help-block">{{$ctrl.monthError}}</span> -->
+            <p ng-show="paymentDetailsForm.month.$invalid || $ctrl.validMonth===0" class="help-block">Invalid Month</p>
           </div>
         </div>
         <!-- CVV Code -->
         <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-3 col-xs-12">
             <label for="cpwd">CVV Code</label>
           </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
-            <input name="cvv" ng-model="$ctrl.cvv" class="form-control" type="text" placeholder="CVV Code" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="3" required="" />
-            <span ng-show="paymentDetailsForm.cvv.$invalid" class="help-block">Invalid CVV Code</span>
+          <div class="col-md-3 col-sm-3 col-xs-12">
+            <input name="cvv" ng-model="$ctrl.cvv" class="form-control" type="password" placeholder="CVV Code" ng-pattern="/^[0-9]+$/" ng-minlength="3" ng-maxlength="3" required="" maxlength="3" />
+            <p ng-show="paymentDetailsForm.cvv.$invalid" class="help-block">Invalid CVV Code</p>
           </div>
         </div>
         <!-- make default -->
         <div class="adn-row">
-          <div class="col-md-4 col-sm-4 col-xs-12">
+          <div class="col-md-3 col-sm-3 col-xs-12">
             <label for="cpwd">Default</label>
           </div>
-          <div class="col-md-8 col-sm-8 col-xs-12">
+          <div class="col-md-9 col-sm-9 col-xs-12">
             <input name="default" ng-model="$ctrl.default" class="form-control default-payment" type="checkbox" />
             <span>Use these credentials as your default payment method.</span>
           </div>
@@ -109,8 +112,8 @@
         </div>
         <!-- Submit -->
         <div class="adn-row">
-          <div class="col-lg-8 col-lg-offset-4 col-md-8 col-md-offset-4 col-md-offset-4 col-sm-12 col-xs-12">
-            <button type="submit" class="btn adn-btn right" ng-disabled="paymentDetailsForm.card.$invalid || paymentDetailsForm.year.$invalid || paymentDetailsForm.month.$invalid || paymentDetailsForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || paymentDetailsForm.middleName.$invalid || paymentDetailsForm.lastName.$invalid">Submit</button>
+          <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
+            <button type="button" ng-click="$ctrl.submit()" class="btn modal_btn btn_size pull-right" value="Next" id="submit" ng-disabled="paymentDetailsForm.card.$invalid || ($ctrl.totalDigits<19) ||  paymentDetailsForm.year.$invalid || paymentDetailsForm.month.$invalid || $ctrl.validMonth===0 || paymentDetailsForm.cvv.$invalid || paymentDetailsForm.firstName.$invalid || paymentDetailsForm.middleName.$invalid || paymentDetailsForm.lastName.$invalid">Submit</button>
           </div>
         </div>
       </form>
