updated myprofile sponsoredpage, addlisting modification

--- a/app/myProfile/upgradeAccount/view.html
+++ b/app/myProfile/upgradeAccount/view.html
@@ -33,7 +33,7 @@
                       Paid
                     </h4>
                     <p class="package-billing">
-                      <button type="button" ng-click="$ctrl.payment()" class="btn btn-success">Upgrade</button>
+                      <button type="button" ng-click="$ctrl.payment('sponsored')" class="btn btn-success">Upgrade</button>
                     </p>
                   </div>
                 </th>
@@ -43,7 +43,7 @@
                       Featured
                     </h4>
                     <p class="package-billing">
-                      <button type="button" ng-click="$ctrl.payment()" class="btn btn-success">Upgrade</button>
+                      <button type="button" ng-click="$ctrl.payment('featured')" class="btn btn-success">Upgrade</button>
                     </p>
                   </div>
                 </th>
