--- a/app/myProfile/sponsorAds/view.html
+++ b/app/myProfile/sponsorAds/view.html
@@ -1,50 +1,27 @@
-<div class="sponsor-ads">
-  <section-heading>Sponsor Ads</section-heading>
-  <div class="profile-content">
-
-    <div class="profile-row">
-      <div class="adn-table">
-        <div id="no-more-tables">
-          <table class="col-md-12 col-xs-12 col-sm-12  table-striped table-condensed cf padding_0">
-            <thead class="cf">
-              <tr>
-                <th>Image</th>
-                <th>Title</th>
-                <th>Name</th>
-                <th class="width_adjust_tb">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr current-page="$ctrl.pagination.current" ng-repeat="list in $ctrl.sponsor.sponsored_ads">
-                <td data-title="Image">
-                  <div class="img_outer_in_tb">
-                    <div class="img_inner_in_tb">
-                      <img class="center-logo-in-tb" src="{{list.image}}" alt="Sponsor Ads">
-                    </div>
-                  </div>
-                </td>
-                <td data-title="Title ">{{list.title}}
-                </td>
-                <td data-title="Name ">
-                  {{list.name}}
-                </td>
-                <td data-title="Action ">
-                  <a href="/#/my-profile/sponsor-ads/view-sponsor/{{list.id}} " data-toggle="tooltip " data-placement="bottom " title="View "><i class="glyphicon glyphicon-eye-open "></i></a>
-                  <a href="/#/my-profile/sponsor-ads/edit-sponsor/{{list.id}} " data-toggle="tooltip " data-placement="bottom " title="Edit "><i class="glyphicon glyphicon-edit "></i></a>
-                  <a id="status-{{list.id}} " href="javascript:; " data-toggle="tooltip " data-placement="bottom " ng-click="$ctrl.actDect(list.id) "><i class=" " ng-show="list.active ">Deactivate</i><i class=" " ng-show="(list.active==false) ">Activate</i></a>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <nav class="pagination-nav " aria-label="Page navigation ">
-            <ul class="pagination ">
-              <li><a href="# ">&laquo;</a></li>
-              <li ng-click="$ctrl.pageChanged(i) " ng-repeat="i in $ctrl.totalPages track by $index " class="hide_blank{{i}} "><a href="javascript:; " class="remove_margin ">{{i}}</a></li>
-              <li><a href="# ">&raquo;</a></li>
-            </ul>
-          </nav>
-        </div>
+<div class="row">
+  <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12 padding_0 listing_wrapper_inner">
+    <div class="col-md-12 col-sm-12 col-lg-12 col-xs-12">
+      <p class="heading_treatment_center">Choose your options below to advertise treatment center</p>
+    </div>
+    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+    </div>
+    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+      <!-- <div class="col-md-2 col-sm-2 col-xs-12">
+        <!-- <label for="tname">Treatment Center: </label>
+    </div> -->
+      <div class="col-sm-12">
+        <div ng-dropdown-multiselect="" options="$ctrl.treatmentCenters" ng-click="$event.stopPropagation()" selected-model="$ctrl.treatmentCentersModel" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $root.centerSelect, onItemDeselect: $root.centerDeSelect}" checkboxes="true" translation-texts="$ctrl.treatmentCenter"></div>
+        <!-- <span ng-show="$root.centerSelected.length===0 " style="color:red;">Select any treatment center.</span> -->
       </div>
     </div>
+    <!-- Search By State Section -->
+    <sponsored-ads-state-select></sponsored-ads-state-select>
+    <sponsor-ads-sponsored-cart></sponsor-ads-sponsored-cart>
+    <div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 padding_0 main_wrap_form_inner_sub">
+      <div class="text-right col-md-12 col-sm-12 col-xs-12 col-lg-12 main_wrap_form_inner_sub sub">
+        <input type="button" ng-click="$ctrl.submit()" class="btn modal_btn btn_size pull-right" value="Submit" id="submit" ng-disabled="$ctrl.treatmentCentersModel.length===0 || $root.centerSelected.length===0">
+      </div>
+    </div>
+
   </div>
 </div>
