--- a/app/addListing/sponsoredStateSelect/view.html
+++ b/app/addListing/sponsoredStateSelect/view.html
@@ -10,7 +10,7 @@
   </div>
   <div class="col-sm-12 steps_sponsored">Select State: </div>
   <div class="additional_filters">
-    <div class="col-sm-12">
+    <div class="col-sm-12 margin_bottom_state">
       <div ng-dropdown-multiselect="" id="statesSelect" options="$root.allStates" translation-texts="$ctrl.stateSelectText" selected-model="$root.stateSelectModel" extra-settings="$ctrl.stateSelectSetting" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart, onSelectAll: $ctrl.updateCart, onDeselectAll:$ctrl.updateCart}" checkboxes="true"></div>
     </div>
   </div>
