--- a/app/myProfile/sponsoredAdsStateSelect/view.html
+++ b/app/myProfile/sponsoredAdsStateSelect/view.html
@@ -10,7 +10,7 @@
   </div>
   <div class="col-sm-12 steps_sponsored">Select State: </div>
   <div class="additional_filters">
-    <div class="col-sm-12">
+    <div class="col-sm-12 margin_bottom_state">
       <div ng-dropdown-multiselect="" id="statesSelect" options="$root.allStates" translation-texts="$ctrl.stateSelectText" selected-model="$root.stateSelectModel" extra-settings="$ctrl.stateSelectSetting" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart, onSelectAll: $ctrl.updateCart, onDeselectAll:$ctrl.updateCart}" checkboxes="true"></div>
     </div>
   </div>
@@ -26,7 +26,7 @@
       <div class="col-sm-3">
         <div ng-dropdown-multiselect="" id="payment" options="$root.payment" selected-model="$root.paymentModel" translation-texts="$ctrl.buttonTxtPayment" extra-settings="$ctrl.multiselectModelSettings" events="{onItemSelect: $ctrl.updateCart, onItemDeselect: $ctrl.updateCart}" checkboxes="true"></div>
       </div>
-      <div style="margin-bottom:30%;"></div>
+      <div style="margin-bottom:40%;"></div>
     </div>
     <div class="col-md-12 pull-right">
       <div class="col-sm-3">
