--- a/app/addListing/cartDetail/view.html
+++ b/app/addListing/cartDetail/view.html
@@ -39,7 +39,7 @@
         <span class="pull-left">STATE</span>
       </td>
       <td class="wrap_cart_item">
-        <span class="label label-primary" ng-repeat="(key,state) in $root.statesSel">{{state}}<i ng-click="$ctrl.deleteCartItem(key,'state')" class="fa fa-times"> </i></span>
+        <span class="label label-primary" ng-repeat="(key,state) in $root.statesSel">{{state.state}}<i ng-click="$ctrl.deleteCartItem(key,'state')" class="fa fa-times"> </i></span>
       </td>
       <td width="10%">${{$ctrl.stateTotalCost}}</td>
     </tr>
